<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.jokku.funapp.presentation.content.CorrectTextView
        android:id="@+id/list_favorite_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="Long text with intention to show ellipsized text in the end of this line" />

    <com.jokku.funapp.presentation.content.CorrectImageButton
        android:id="@+id/list_favorite_ib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:background="?selectableItemBackground"
        android:tint="@color/purple_200"
        android:src="@drawable/ic_outline_favorite_34" />
</LinearLayout>