...
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            tools:text="Loooooooooooooooooooooooong text" />

        <com.jokku.funapp.presentation.CorrectImageButton
            android:id="@+id/favorite_ib"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="10"
            android:background="?selectableItemBackground"
            android:visibility="invisible"
...
